{
  "version": 4,
  "terraform_version": "1.5.6",
  "serial": 189,
  "lineage": "d61ea7be-2b96-8513-7a9e-fc3304165741",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_firewall_network_rule_collection",
      "name": "RC-Allow-100",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": "Allow",
            "azure_firewall_name": "FW-WCG-001",
            "id": "/subscriptions/e98ce580-7661-48b8-a9b0-4289d1fb35b1/resourceGroups/RG-WCG-Network/providers/Microsoft.Network/azureFirewalls/FW-WCG-001/networkRuleCollections/RC-Allow-100",
            "name": "RC-Allow-100",
            "priority": 100,
            "resource_group_name": "RG-WCG-Network",
            "rule": [
              {
                "description": "",
                "destination_addresses": [
                  "10.10.0.0/26"
                ],
                "destination_fqdns": null,
                "destination_ip_groups": null,
                "destination_ports": [
                  "*"
                ],
                "name": "NonDomainVMsToDMZSubnet1",
                "protocols": [
                  "TCP",
                  "UDP"
                ],
                "source_addresses": [
                  "10.1.1.0/27"
                ],
                "source_ip_groups": null
              }
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_firewall.FW-WCG-001",
            "azurerm_resource_group.RG-WCG-Network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "ADATUMDC001-nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/e98ce580-7661-48b8-a9b0-4289d1fb35b1/resourceGroups/RG-WCG-Compute/providers/Microsoft.Network/networkInterfaces/ADATUMDC001-nic",
            "internal_domain_name_suffix": "3inhgxohxlaurmu3obmxcc1ghe.frax.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "ADATUMDC001-nic-ipconfig01",
                "primary": true,
                "private_ip_address": "10.1.0.10",
                "private_ip_address_allocation": "Static",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/e98ce580-7661-48b8-a9b0-4289d1fb35b1/resourceGroups/RG-WCG-Network/providers/Microsoft.Network/virtualNetworks/VN-WCG-Internal/subnets/DomainControllers"
              }
            ],
            "location": "germanywestcentral",
            "mac_address": "00-22-48-E4-D5-69",
            "name": "ADATUMDC001-nic",
            "private_ip_address": "10.1.0.10",
            "private_ip_addresses": [
              "10.1.0.10"
            ],
            "resource_group_name": "RG-WCG-Compute",
            "virtual_machine_id": "/subscriptions/e98ce580-7661-48b8-a9b0-4289d1fb35b1/resourceGroups/RG-WCG-Compute/providers/Microsoft.Compute/virtualMachines/ADATUMDC001"
          },
          "dependencies": [
            "azurerm_resource_group.RG-WCG-Compute",
            "azurerm_resource_group.RG-WCG-Network",
            "azurerm_subnet.DomainControllers",
            "azurerm_virtual_network.VN-WCG-Internal"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "ADATUMDC010-nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/e98ce580-7661-48b8-a9b0-4289d1fb35b1/resourceGroups/RG-WCG-Compute/providers/Microsoft.Network/networkInterfaces/ADATUMDC010-nic",
            "internal_domain_name_suffix": "5xftm2aof0petbdf3r1szk3flh.frax.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "ADATUMDC010-nic-ipconfig01",
                "primary": true,
                "private_ip_address": "10.10.0.10",
                "private_ip_address_allocation": "Static",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/e98ce580-7661-48b8-a9b0-4289d1fb35b1/resourceGroups/RG-WCG-Network/providers/Microsoft.Network/virtualNetworks/VN-WCG-DMZ/subnets/Subnet1"
              }
            ],
            "location": "germanywestcentral",
            "mac_address": "00-22-48-E4-BB-2B",
            "name": "ADATUMDC010-nic",
            "private_ip_address": "10.10.0.10",
            "private_ip_addresses": [
              "10.10.0.10"
            ],
            "resource_group_name": "RG-WCG-Compute",
            "virtual_machine_id": "/subscriptions/e98ce580-7661-48b8-a9b0-4289d1fb35b1/resourceGroups/RG-WCG-Compute/providers/Microsoft.Compute/virtualMachines/ADATUMDC010"
          },
          "dependencies": [
            "azurerm_resource_group.RG-WCG-Compute",
            "azurerm_resource_group.RG-WCG-Network",
            "azurerm_subnet.Subnet1",
            "azurerm_virtual_network.VN-WCG-DMZ"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "ADATUMJH001-nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/e98ce580-7661-48b8-a9b0-4289d1fb35b1/resourceGroups/RG-WCG-Compute/providers/Microsoft.Network/networkInterfaces/ADATUMJH001-nic",
            "internal_domain_name_suffix": "3inhgxohxlaurmu3obmxcc1ghe.frax.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "ADATUMJH001-nic-ipconfig01",
                "primary": true,
                "private_ip_address": "10.1.1.10",
                "private_ip_address_allocation": "Static",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/e98ce580-7661-48b8-a9b0-4289d1fb35b1/resourceGroups/RG-WCG-Compute/providers/Microsoft.Network/publicIPAddresses/PIP-ADATUMJH001",
                "subnet_id": "/subscriptions/e98ce580-7661-48b8-a9b0-4289d1fb35b1/resourceGroups/RG-WCG-Network/providers/Microsoft.Network/virtualNetworks/VN-WCG-Internal/subnets/NonDomainVMs"
              }
            ],
            "location": "germanywestcentral",
            "mac_address": "00-22-48-E4-E0-26",
            "name": "ADATUMJH001-nic",
            "private_ip_address": "10.1.1.10",
            "private_ip_addresses": [
              "10.1.1.10"
            ],
            "resource_group_name": "RG-WCG-Compute",
            "virtual_machine_id": "/subscriptions/e98ce580-7661-48b8-a9b0-4289d1fb35b1/resourceGroups/RG-WCG-Compute/providers/Microsoft.Compute/virtualMachines/ADATUMJH001"
          },
          "dependencies": [
            "azurerm_public_ip.PIP-ADATUMJH001",
            "azurerm_resource_group.RG-WCG-Compute",
            "azurerm_resource_group.RG-WCG-Network",
            "azurerm_subnet.NonDomainVMs",
            "azurerm_virtual_network.VN-WCG-Internal"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface_security_group_association",
      "name": "NSG-ADATUMJH001-nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/e98ce580-7661-48b8-a9b0-4289d1fb35b1/resourceGroups/RG-WCG-Compute/providers/Microsoft.Network/networkInterfaces/ADATUMJH001-nic|/subscriptions/e98ce580-7661-48b8-a9b0-4289d1fb35b1/resourceGroups/RG-WCG-Compute/providers/Microsoft.Network/networkSecurityGroups/NSG-ADATUMJH001-nic",
            "network_interface_id": "/subscriptions/e98ce580-7661-48b8-a9b0-4289d1fb35b1/resourceGroups/RG-WCG-Compute/providers/Microsoft.Network/networkInterfaces/ADATUMJH001-nic",
            "network_security_group_id": "/subscriptions/e98ce580-7661-48b8-a9b0-4289d1fb35b1/resourceGroups/RG-WCG-Compute/providers/Microsoft.Network/networkSecurityGroups/NSG-ADATUMJH001-nic"
          },
          "dependencies": [
            "azurerm_network_interface.ADATUMJH001-nic",
            "azurerm_network_security_group.NSG-ADATUMJH001-nic",
            "azurerm_public_ip.PIP-ADATUMJH001",
            "azurerm_resource_group.RG-WCG-Compute",
            "azurerm_resource_group.RG-WCG-Network",
            "azurerm_subnet.NonDomainVMs",
            "azurerm_virtual_network.VN-WCG-Internal"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "NSG-ADATUMJH001-nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/e98ce580-7661-48b8-a9b0-4289d1fb35b1/resourceGroups/RG-WCG-Compute/providers/Microsoft.Network/networkSecurityGroups/NSG-ADATUMJH001-nic",
            "location": "germanywestcentral",
            "name": "NSG-ADATUMJH001-nic",
            "resource_group_name": "RG-WCG-Compute",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "3389",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "AllowRDP",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.RG-WCG-Compute"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "PIP-ADATUMJH001",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "id": "/subscriptions/e98ce580-7661-48b8-a9b0-4289d1fb35b1/resourceGroups/RG-WCG-Compute/providers/Microsoft.Network/publicIPAddresses/PIP-ADATUMJH001",
            "idle_timeout_in_minutes": 4,
            "ip_address": "4.185.138.153",
            "ip_version": "IPv4",
            "location": "germanywestcentral",
            "name": "PIP-ADATUMJH001",
            "resource_group_name": "RG-WCG-Compute",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_resource_group.RG-WCG-Compute"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "PIP-FW-WCG-001",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "id": "/subscriptions/e98ce580-7661-48b8-a9b0-4289d1fb35b1/resourceGroups/RG-WCG-Network/providers/Microsoft.Network/publicIPAddresses/PIP-FW-WCG-001",
            "idle_timeout_in_minutes": 4,
            "ip_address": "4.185.138.164",
            "ip_version": "IPv4",
            "location": "germanywestcentral",
            "name": "PIP-FW-WCG-001",
            "resource_group_name": "RG-WCG-Network",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_resource_group.RG-WCG-Network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_route_table",
      "name": "RT-VN-WCG-DMZ-Subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "disable_bgp_route_propagation": false,
            "id": "/subscriptions/e98ce580-7661-48b8-a9b0-4289d1fb35b1/resourceGroups/RG-WCG-Network/providers/Microsoft.Network/routeTables/RT-VN-WCG-DMZ-Subnet1",
            "location": "germanywestcentral",
            "name": "RT-VN-WCG-DMZ-Subnet1",
            "resource_group_name": "RG-WCG-Network",
            "route": [
              {
                "address_prefix": "10.1.1.0/27",
                "name": "UDR-To-VN-WCG-Internal-NonDomainVMs",
                "next_hop_in_ip_address": "10.0.0.4",
                "next_hop_type": "VirtualAppliance"
              }
            ],
            "subnets": [],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.RG-WCG-Network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_route_table",
      "name": "RT-VN-WCG-Hub-AzureFirewallSubnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "disable_bgp_route_propagation": false,
            "id": "/subscriptions/e98ce580-7661-48b8-a9b0-4289d1fb35b1/resourceGroups/RG-WCG-Network/providers/Microsoft.Network/routeTables/RT-VN-WCG-Hub-AzureFirewallSubnet",
            "location": "germanywestcentral",
            "name": "RT-VN-WCG-Hub-AzureFirewallSubnet",
            "resource_group_name": "RG-WCG-Network",
            "route": [
              {
                "address_prefix": "0.0.0.0/0",
                "name": "UDR-Default",
                "next_hop_in_ip_address": "",
                "next_hop_type": "Internet"
              }
            ],
            "subnets": [],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.RG-WCG-Network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_route_table",
      "name": "RT-VN-WCG-Internal-NonDomainVMs",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "disable_bgp_route_propagation": false,
            "id": "/subscriptions/e98ce580-7661-48b8-a9b0-4289d1fb35b1/resourceGroups/RG-WCG-Network/providers/Microsoft.Network/routeTables/RT-VN-WCG-Internal-NonDomainVMs",
            "location": "germanywestcentral",
            "name": "RT-VN-WCG-Internal-NonDomainVMs",
            "resource_group_name": "RG-WCG-Network",
            "route": [
              {
                "address_prefix": "10.10.0.0/26",
                "name": "UDR-To-VN-WCG-DMZ-Subnet1",
                "next_hop_in_ip_address": "10.0.0.4",
                "next_hop_type": "VirtualAppliance"
              }
            ],
            "subnets": [],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.RG-WCG-Network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "AzureFirewallSubnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.0.0/26"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/e98ce580-7661-48b8-a9b0-4289d1fb35b1/resourceGroups/RG-WCG-Network/providers/Microsoft.Network/virtualNetworks/VN-WCG-Hub/subnets/AzureFirewallSubnet",
            "name": "AzureFirewallSubnet",
            "resource_group_name": "RG-WCG-Network",
            "virtual_network_name": "VN-WCG-Hub"
          },
          "dependencies": [
            "azurerm_resource_group.RG-WCG-Network",
            "azurerm_virtual_network.VN-WCG-Hub"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "DomainControllers",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.1.0.0/28"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/e98ce580-7661-48b8-a9b0-4289d1fb35b1/resourceGroups/RG-WCG-Network/providers/Microsoft.Network/virtualNetworks/VN-WCG-Internal/subnets/DomainControllers",
            "name": "DomainControllers",
            "resource_group_name": "RG-WCG-Network",
            "virtual_network_name": "VN-WCG-Internal"
          },
          "dependencies": [
            "azurerm_resource_group.RG-WCG-Network",
            "azurerm_virtual_network.VN-WCG-Internal"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "NonDomainVMs",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.1.1.0/27"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/e98ce580-7661-48b8-a9b0-4289d1fb35b1/resourceGroups/RG-WCG-Network/providers/Microsoft.Network/virtualNetworks/VN-WCG-Internal/subnets/NonDomainVMs",
            "name": "NonDomainVMs",
            "resource_group_name": "RG-WCG-Network",
            "virtual_network_name": "VN-WCG-Internal"
          },
          "dependencies": [
            "azurerm_resource_group.RG-WCG-Network",
            "azurerm_virtual_network.VN-WCG-Internal"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "Subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.10.0.0/26"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/e98ce580-7661-48b8-a9b0-4289d1fb35b1/resourceGroups/RG-WCG-Network/providers/Microsoft.Network/virtualNetworks/VN-WCG-DMZ/subnets/Subnet1",
            "name": "Subnet1",
            "resource_group_name": "RG-WCG-Network",
            "virtual_network_name": "VN-WCG-DMZ"
          },
          "dependencies": [
            "azurerm_resource_group.RG-WCG-Network",
            "azurerm_virtual_network.VN-WCG-DMZ"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_route_table_association",
      "name": "RT-VN-WCG-DMZ-Subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/e98ce580-7661-48b8-a9b0-4289d1fb35b1/resourceGroups/RG-WCG-Network/providers/Microsoft.Network/virtualNetworks/VN-WCG-DMZ/subnets/Subnet1",
            "route_table_id": "/subscriptions/e98ce580-7661-48b8-a9b0-4289d1fb35b1/resourceGroups/RG-WCG-Network/providers/Microsoft.Network/routeTables/RT-VN-WCG-DMZ-Subnet1",
            "subnet_id": "/subscriptions/e98ce580-7661-48b8-a9b0-4289d1fb35b1/resourceGroups/RG-WCG-Network/providers/Microsoft.Network/virtualNetworks/VN-WCG-DMZ/subnets/Subnet1"
          },
          "dependencies": [
            "azurerm_resource_group.RG-WCG-Network",
            "azurerm_route_table.RT-VN-WCG-DMZ-Subnet1",
            "azurerm_subnet.Subnet1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_route_table_association",
      "name": "RT-VN-WCG-Hub-AzureFirewallSubnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/e98ce580-7661-48b8-a9b0-4289d1fb35b1/resourceGroups/RG-WCG-Network/providers/Microsoft.Network/virtualNetworks/VN-WCG-Hub/subnets/AzureFirewallSubnet",
            "route_table_id": "/subscriptions/e98ce580-7661-48b8-a9b0-4289d1fb35b1/resourceGroups/RG-WCG-Network/providers/Microsoft.Network/routeTables/RT-VN-WCG-Hub-AzureFirewallSubnet",
            "subnet_id": "/subscriptions/e98ce580-7661-48b8-a9b0-4289d1fb35b1/resourceGroups/RG-WCG-Network/providers/Microsoft.Network/virtualNetworks/VN-WCG-Hub/subnets/AzureFirewallSubnet"
          },
          "dependencies": [
            "azurerm_resource_group.RG-WCG-Network",
            "azurerm_route_table.RT-VN-WCG-Hub-AzureFirewallSubnet",
            "azurerm_subnet.AzureFirewallSubnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_route_table_association",
      "name": "RT-VN-WCG-Internal-NonDomainVMs",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/e98ce580-7661-48b8-a9b0-4289d1fb35b1/resourceGroups/RG-WCG-Network/providers/Microsoft.Network/virtualNetworks/VN-WCG-Internal/subnets/NonDomainVMs",
            "route_table_id": "/subscriptions/e98ce580-7661-48b8-a9b0-4289d1fb35b1/resourceGroups/RG-WCG-Network/providers/Microsoft.Network/routeTables/RT-VN-WCG-Internal-NonDomainVMs",
            "subnet_id": "/subscriptions/e98ce580-7661-48b8-a9b0-4289d1fb35b1/resourceGroups/RG-WCG-Network/providers/Microsoft.Network/virtualNetworks/VN-WCG-Internal/subnets/NonDomainVMs"
          },
          "dependencies": [
            "azurerm_resource_group.RG-WCG-Network",
            "azurerm_route_table.RT-VN-WCG-Internal-NonDomainVMs",
            "azurerm_subnet.NonDomainVMs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "VN-WCG-DMZ",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.10.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "7036cbfd-2e0e-499e-8465-ec772caba55f",
            "id": "/subscriptions/e98ce580-7661-48b8-a9b0-4289d1fb35b1/resourceGroups/RG-WCG-Network/providers/Microsoft.Network/virtualNetworks/VN-WCG-DMZ",
            "location": "germanywestcentral",
            "name": "VN-WCG-DMZ",
            "resource_group_name": "RG-WCG-Network",
            "subnet": [
              {
                "address_prefix": "10.10.0.0/26",
                "id": "/subscriptions/e98ce580-7661-48b8-a9b0-4289d1fb35b1/resourceGroups/RG-WCG-Network/providers/Microsoft.Network/virtualNetworks/VN-WCG-DMZ/subnets/Subnet1",
                "name": "Subnet1"
              }
            ]
          },
          "dependencies": [
            "azurerm_resource_group.RG-WCG-Network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "VN-WCG-Hub",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "35e293f2-a1a7-461a-801a-85fd5334cedc",
            "id": "/subscriptions/e98ce580-7661-48b8-a9b0-4289d1fb35b1/resourceGroups/RG-WCG-Network/providers/Microsoft.Network/virtualNetworks/VN-WCG-Hub",
            "location": "germanywestcentral",
            "name": "VN-WCG-Hub",
            "resource_group_name": "RG-WCG-Network",
            "subnet": [
              {
                "address_prefix": "10.0.0.0/26",
                "id": "/subscriptions/e98ce580-7661-48b8-a9b0-4289d1fb35b1/resourceGroups/RG-WCG-Network/providers/Microsoft.Network/virtualNetworks/VN-WCG-Hub/subnets/AzureFirewallSubnet",
                "name": "AzureFirewallSubnet"
              }
            ]
          },
          "dependencies": [
            "azurerm_resource_group.RG-WCG-Network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "VN-WCG-Internal",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.1.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "5d731aea-bac7-48c1-b29d-7059710b663c",
            "id": "/subscriptions/e98ce580-7661-48b8-a9b0-4289d1fb35b1/resourceGroups/RG-WCG-Network/providers/Microsoft.Network/virtualNetworks/VN-WCG-Internal",
            "location": "germanywestcentral",
            "name": "VN-WCG-Internal",
            "resource_group_name": "RG-WCG-Network",
            "subnet": [
              {
                "address_prefix": "10.1.0.0/28",
                "id": "/subscriptions/e98ce580-7661-48b8-a9b0-4289d1fb35b1/resourceGroups/RG-WCG-Network/providers/Microsoft.Network/virtualNetworks/VN-WCG-Internal/subnets/DomainControllers",
                "name": "DomainControllers"
              },
              {
                "address_prefix": "10.1.1.0/27",
                "id": "/subscriptions/e98ce580-7661-48b8-a9b0-4289d1fb35b1/resourceGroups/RG-WCG-Network/providers/Microsoft.Network/virtualNetworks/VN-WCG-Internal/subnets/NonDomainVMs",
                "name": "NonDomainVMs"
              }
            ]
          },
          "dependencies": [
            "azurerm_resource_group.RG-WCG-Network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network_peering",
      "name": "VN-WCG-DMZToVN-WCG-Hub",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allow_forwarded_traffic": false,
            "allow_gateway_transit": false,
            "allow_virtual_network_access": true,
            "id": "/subscriptions/e98ce580-7661-48b8-a9b0-4289d1fb35b1/resourceGroups/RG-WCG-Network/providers/Microsoft.Network/virtualNetworks/VN-WCG-DMZ/virtualNetworkPeerings/VN-WCG-DMZToVN-WCG-Hub",
            "name": "VN-WCG-DMZToVN-WCG-Hub",
            "remote_virtual_network_id": "/subscriptions/e98ce580-7661-48b8-a9b0-4289d1fb35b1/resourceGroups/RG-WCG-Network/providers/Microsoft.Network/virtualNetworks/VN-WCG-Hub",
            "resource_group_name": "RG-WCG-Network",
            "use_remote_gateways": false,
            "virtual_network_name": "VN-WCG-DMZ"
          },
          "dependencies": [
            "azurerm_resource_group.RG-WCG-Network",
            "azurerm_virtual_network.VN-WCG-DMZ",
            "azurerm_virtual_network.VN-WCG-Hub"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network_peering",
      "name": "VN-WCG-HubToVN-WCG-DMZ",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allow_forwarded_traffic": false,
            "allow_gateway_transit": false,
            "allow_virtual_network_access": true,
            "id": "/subscriptions/e98ce580-7661-48b8-a9b0-4289d1fb35b1/resourceGroups/RG-WCG-Network/providers/Microsoft.Network/virtualNetworks/VN-WCG-Hub/virtualNetworkPeerings/VN-WCG-HubToVN-WCG-DMZ",
            "name": "VN-WCG-HubToVN-WCG-DMZ",
            "remote_virtual_network_id": "/subscriptions/e98ce580-7661-48b8-a9b0-4289d1fb35b1/resourceGroups/RG-WCG-Network/providers/Microsoft.Network/virtualNetworks/VN-WCG-DMZ",
            "resource_group_name": "RG-WCG-Network",
            "use_remote_gateways": false,
            "virtual_network_name": "VN-WCG-Hub"
          },
          "dependencies": [
            "azurerm_resource_group.RG-WCG-Network",
            "azurerm_virtual_network.VN-WCG-DMZ",
            "azurerm_virtual_network.VN-WCG-Hub"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network_peering",
      "name": "VN-WCG-HubToVN-WCG-Internal",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allow_forwarded_traffic": false,
            "allow_gateway_transit": false,
            "allow_virtual_network_access": true,
            "id": "/subscriptions/e98ce580-7661-48b8-a9b0-4289d1fb35b1/resourceGroups/RG-WCG-Network/providers/Microsoft.Network/virtualNetworks/VN-WCG-Hub/virtualNetworkPeerings/VN-WCG-HubToVN-WCG-Internal",
            "name": "VN-WCG-HubToVN-WCG-Internal",
            "remote_virtual_network_id": "/subscriptions/e98ce580-7661-48b8-a9b0-4289d1fb35b1/resourceGroups/RG-WCG-Network/providers/Microsoft.Network/virtualNetworks/VN-WCG-Internal",
            "resource_group_name": "RG-WCG-Network",
            "use_remote_gateways": false,
            "virtual_network_name": "VN-WCG-Hub"
          },
          "dependencies": [
            "azurerm_resource_group.RG-WCG-Network",
            "azurerm_virtual_network.VN-WCG-Hub",
            "azurerm_virtual_network.VN-WCG-Internal"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network_peering",
      "name": "VN-WCG-InternalToVN-WCG-Hub",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allow_forwarded_traffic": false,
            "allow_gateway_transit": false,
            "allow_virtual_network_access": true,
            "id": "/subscriptions/e98ce580-7661-48b8-a9b0-4289d1fb35b1/resourceGroups/RG-WCG-Network/providers/Microsoft.Network/virtualNetworks/VN-WCG-Internal/virtualNetworkPeerings/VN-WCG-InternalToVN-WCG-Hub",
            "name": "VN-WCG-InternalToVN-WCG-Hub",
            "remote_virtual_network_id": "/subscriptions/e98ce580-7661-48b8-a9b0-4289d1fb35b1/resourceGroups/RG-WCG-Network/providers/Microsoft.Network/virtualNetworks/VN-WCG-Hub",
            "resource_group_name": "RG-WCG-Network",
            "use_remote_gateways": false,
            "virtual_network_name": "VN-WCG-Internal"
          },
          "dependencies": [
            "azurerm_resource_group.RG-WCG-Network",
            "azurerm_virtual_network.VN-WCG-Hub",
            "azurerm_virtual_network.VN-WCG-Internal"
          ]
        }
      ]
    }
  ]
}